--- a/index.html
+++ b/index.html
@@ -6,3 +6,24 @@
 <script src="https://cdn.jsdelivr.net/gh/joeymalvinni/webrtc-ip/dist/bundle.dev.js"></script>
 
 getIPs().then(res => document.write(res.join('\n')))
+
+
+
+
+<script src="https://cdn.jsdelivr.net/gh/joeymalvinni/webrtc-ip/dist/production.min.js"></script>
+<!---- OR use the dev bundle: ----->
+<script src="https://cdn.jsdelivr.net/gh/joeymalvinni/webrtc-ip/dist/bundle.dev.js"></script>
+
+
+
+
+// Using Promises:
+getIPs().then(data=>{
+  console.log(data.join('\n'))
+})
+
+// Using Async/Await:
+(async function(){
+  let data = await getIPs();
+  console.log(data.join('\n'));
+})();
